# insurance-optimise

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  run_convex_reinsurance_tests.py  run_databricks_pytest.py  run_model_quality_tests.py  run_qa_tests.py  run_risk_informed_tests.py  run_tests_databricks.py  run_tests_merged.py  run_tests_v06.py  run_tests_v2.py
.github/workflows/: docs.yml
benchmarks/: README.md  benchmark.py  benchmark_dml.py  benchmark_optimise.py  benchmark_pareto.py
notebooks/: benchmark_demand.py  benchmark_pareto.py  convex_reinsurance_demo.py  databricks_validation.py  portfolio_optimisation_demo.py  quickstart.ipynb  robust_reinsurance_demo.py
src/insurance_optimise/: __init__.py  _demand_model.py  audit.py  constraints.py  convex_reinsurance.py  demand.py  frontier.py  model_quality.py  optimiser.py  pareto.py  pareto_front.py  plotting.py  reinsurance.py  result.py  risk_sharing.py  scenarios.py  stochastic.py
src/insurance_optimise/demand/: __init__.py  _types.py  compliance.py  conversion.py  datasets.py  demand_curve.py  elasticity.py  optimiser.py  retention.py  risk_informed.py
tests/: conftest.py  test_audit.py  test_constraints.py  test_constraints_extended.py  test_convex_reinsurance.py  test_demand.py  test_frontier.py  test_integration.py  test_model_quality.py  test_model_quality_extended.py  test_optimiser.py  test_pareto.py  test_pareto_front.py  test_plotting.py  test_reinsurance.py  test_result.py  test_result_extended.py  test_risk_sharing.py  test_scenarios.py  test_stochastic.py
tests/demand/: test_compliance.py  test_conversion.py  test_datasets.py  test_demand_curve.py  test_optimiser.py  test_retention.py  test_risk_informed_retention.py
