[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-optimise"
version = "0.3.4"
description = "Constrained portfolio rate optimisation for UK personal lines insurance, with FCA ENBP enforcement, demand-linked objectives, and efficient frontier generation"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "actuarial",
    "insurance",
    "pricing",
    "optimisation",
    "portfolio",
    "rate change",
    "enbp",
    "consumer duty",
    "loss ratio",
    "demand elasticity",
    "slsqp",
    "personal lines",
    "conversion",
    "retention",
    "DML",
    "causal inference",
    "GIPP",
    "PS21/11",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "polars>=1.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "statsmodels>=0.14.5",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
catboost = [
    "catboost>=1.2",
]
dml = [
    "doubleml>=0.7",
    "catboost>=1.2",
]
causal = [
    "econml>=0.15",
    "catboost>=1.2",
]
survival = [
    "lifelines>=0.27",
]
plot = [
    "matplotlib>=3.6",
]
all = [
    "catboost>=1.2",
    "doubleml>=0.7",
    "econml>=0.15",
    "lifelines>=0.27",
    "matplotlib>=3.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "matplotlib>=3.6",
    "pyarrow>=12.0",
    "pdoc>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-optimise"
Repository = "https://github.com/burning-cost/insurance-optimise"
Issues = "https://github.com/burning-cost/insurance-optimise/issues"
Documentation = "https://burning-cost.github.io/insurance-optimise/"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_optimise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/insurance_optimise"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
