[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-optimise"
version = "0.5.0"
description = "Constrained portfolio rate optimisation for UK personal lines insurance, with FCA ENBP enforcement, demand-linked objectives, efficient frontier, 3-objective Pareto surface with fairness, model quality LR adjustment, and robust multi-line reinsurance optimisation"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "actuarial",
    "insurance",
    "pricing",
    "optimisation",
    "portfolio",
    "rate change",
    "enbp",
    "consumer duty",
    "loss ratio",
    "demand elasticity",
    "slsqp",
    "personal lines",
    "conversion",
    "retention",
    "DML",
    "causal inference",
    "GIPP",
    "PS21/11",
    "pareto",
    "fairness",
    "multi-objective",
    "model quality",
    "reinsurance",
    "robust control",
    "model uncertainty",
    "cession",
    "proportional reinsurance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25",
    "polars>=1.0",
    "pandas>=2.0",
    "scikit-learn>=1.6",
    "scipy>=1.12",
    "statsmodels>=0.14.5",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
catboost = [
    "catboost>=1.2",
]
dml = [
    "doubleml>=0.11.0",
    "catboost>=1.2",
]
causal = [
    "econml>=0.15",
    "catboost>=1.2",
]
survival = [
    "lifelines>=0.30",
]
plot = [
    "matplotlib>=3.6",
]
parallel = [
    "joblib>=1.2",
]
pareto = [
    "joblib>=1.2",
    "matplotlib>=3.6",
]
all = [
    "catboost>=1.2",
    "doubleml>=0.11.0",
    "econml>=0.15",
    "lifelines>=0.30",
    "matplotlib>=3.6",
    "joblib>=1.2",
]
# dev extra mirrors [dependency-groups].dev so that `pip install -e ".[dev]"`
# works in CI environments that use pip (e.g. GitHub Actions) rather than uv.
# [dependency-groups] is PEP 735 and is only recognised by uv, not by pip.
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.0",
    "matplotlib>=3.6",
    "pyarrow>=14.0",
    "pdoc>=14.0.0",
]

[project.urls]
Homepage = "https://burning-cost.github.io/insurance-optimise"
Repository = "https://github.com/burning-cost/insurance-optimise"
Changelog = "https://github.com/burning-cost/insurance-optimise/releases"
Documentation = "https://burning-cost.github.io/insurance-optimise/"
Issues = "https://github.com/burning-cost/insurance-optimise/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_optimise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/insurance_optimise"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.0",
    "matplotlib>=3.6",
    "pyarrow>=14.0",
    "pdoc>=14.0.0",
]
